--- a/index.html
+++ b/index.html
@@ -1,131 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>College Football – Full Week</title>
-<style>
-    body {
-        background: #003300;
-        color: #ffcc00;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        text-align: center;
-    }
-    h1 {
-        margin-top: 20px;
-        font-size: 36px;
-        font-weight: bold;
-    }
-    table {
-        width: 100%;
-        margin-top: 20px;
-        border-collapse: collapse;
-        color: white;
-    }
-    th, td {
-        padding: 12px;
-        border-bottom: 1px solid #225522;
-        font-size: 18px;
-    }
-    th {
-        background: #004400;
-        font-weight: bold;
-    }
-    tr:nth-child(even) {
-        background: #002800;
-    }
-    .btn {
-        background: #ffcc00;
-        color: #003300;
-        padding: 10px 20px;
-        border-radius: 8px;
-        margin: 10px;
-        cursor: pointer;
-        border: none;
-        font-weight: bold;
-    }
-</style>
+    <meta charset="UTF-8">
+    <title>College Football – Full Week</title>
+    <style>
+        body {
+            background: #002b00;
+            color: #ffd700;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+            color: #fff;
+        }
+        th {
+            background: #004400;
+            padding: 10px;
+            font-size: 18px;
+        }
+        td {
+            padding: 10px;
+            border-bottom: 1px solid #003300;
+        }
+        .btn {
+            padding: 10px 18px;
+            background: #ffd700;
+            color: #002b00;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+            font-size: 18px;
+            border-radius: 5px;
+        }
+        .top-title {
+            font-size: 40px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>College Football – Full Week</h1>
+    <div class="top-title">College Football – Full Week</div>
 
-<button class="btn" onclick="changeWeek(-1)">← Previous Week</button>
-<button class="btn" onclick="changeWeek(1)">Next Week →</button>
+    <button class="btn" onclick="changeWeek(-1)">← Previous Week</button>
+    <button class="btn" onclick="changeWeek(1)">Next Week →</button>
 
-<h3 id="weekTitle">Loading...</h3>
+    <div id="statusText" style="margin-top: 20px; font-size: 22px;">Loading…</div>
 
-<table>
-    <thead>
-        <tr>
-            <th>Time</th>
-            <th>Div</th>
-            <th>Matchup</th>
-            <th>TV / Result</th>
-        </tr>
-    </thead>
-    <tbody id="games"></tbody>
-</table>
+    <table>
+        <thead>
+            <tr>
+                <th style="width: 20%;">Time</th>
+                <th style="width: 10%;">Div</th>
+                <th style="width: 45%;">Matchup</th>
+                <th style="width: 25%;">TV / Result</th>
+            </tr>
+        </thead>
+        <tbody id="gamesTable"></tbody>
+    </table>
 
 <script>
 let currentWeek = 12;
 let currentYear = 2025;
 
-function parseTime(str) {
-    if (!str || str === "TBA" || str === "Final") return 999999;
-    let d = new Date("1/1/2000 " + str);
-    return d.getTime();
+async function loadWeek() {
+    document.getElementById("statusText").innerText = "Loading…";
+
+    const response = await fetch(`/api/schedule?year=${currentYear}&week=${currentWeek}`);
+    const data = await response.json();
+
+    const gamesTable = document.getElementById("gamesTable");
+    gamesTable.innerHTML = "";
+
+    let total = 0;
+
+    for (const [divName, games] of Object.entries(data.divisions)) {
+        for (const game of games) {
+            total++;
+
+            const { time, matchup, tv, result } = game;
+
+            // Build result text
+            let resultText = "";
+            if (result.homeScore !== null && result.awayScore !== null) {
+                resultText = `${result.awayTeam} ${result.awayScore}, ${result.homeTeam} ${result.homeScore}`;
+            } else {
+                resultText = tv || "";
+            }
+
+            // Build matchup: Away @ Home
+            const matchupText = `${result.awayTeam} @ ${result.homeTeam}`;
+
+            const row = `
+                <tr>
+                    <td>${time}</td>
+                    <td>${divName}</td>
+                    <td>${matchupText}</td>
+                    <td>${resultText}</td>
+                </tr>
+            `;
+            gamesTable.innerHTML += row;
+        }
+    }
+
+    document.getElementById("statusText").innerText =
+        `Loaded ${total} games for Week ${currentWeek}`;
 }
 
-function changeWeek(dir) {
-    currentWeek += dir;
-    loadGames();
+function changeWeek(diff) {
+    currentWeek += diff;
+    loadWeek();
 }
 
-function loadGames() {
-    document.getElementById("games").innerHTML = "";
-    document.getElementById("weekTitle").innerText = "Loading...";
-
-    let url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
-
-    fetch(url)
-        .then(res => res.json())
-        .then(data => {
-            let allGames = [];
-
-            Object.keys(data.divisions).forEach(div => {
-                data.divisions[div].forEach(g => {
-                    allGames.push({
-                        time: g.time || "TBA",
-                        div,
-                        matchup: g.matchup || "",
-                        tv: g.tv || g.result || ""
-                    });
-                });
-            });
-
-            allGames.sort((a,b) => parseTime(a.time) - parseTime(b.time));
-
-            document.getElementById("weekTitle").innerText =
-                `Loaded ${allGames.length} games for Week ${currentWeek}`;
-
-            let tbody = document.getElementById("games");
-            tbody.innerHTML = "";
-
-            allGames.forEach(g => {
-                tbody.innerHTML += `
-                    <tr>
-                        <td>${g.time}</td>
-                        <td>${g.div}</td>
-                        <td>${g.matchup}</td>
-                        <td>${g.tv}</td>
-                    </tr>
-                `;
-            });
-        });
-}
-
-loadGames();
+loadWeek();
 </script>
 
 </body>
